Implement part of SqliteCatalog.